# KERN

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Install KERN.cmd  LICENSE  NOTICE  README-CURRENT.md  README.md  SECURITY.md  STAGING_VALIDATION_PLAN.md  Start KERN.cmd  claudefindings.md  docker-compose.yml  install-kern.cmd  kernintelligence.md  pyproject.toml  start-kern.cmd  tmp-all-deps.txt  tmp-deps.txt
.github/: PULL_REQUEST_TEMPLATE.md
app/: __init__.py  action_planner.py  artifacts.py  attention.py  auth.py  backup.py  body_limit.py  capabilities.py  cognition.py  compliance.py  config.py  config_validation.py  context.py  csrf.py  current_context.py  database.py  dialogue.py  document_classifier.py  document_intelligence.py  documents.py  email_service.py  embeddings.py  encrypted_db.py  events.py  freeform_intelligence.py  german_business.py  identity.py  intelligence.py  intent.py  knowledge_graph.py  license_service.py  llm.py  llm_client.py  local_data.py  logging_config.py  main.py  meetings.py  memory.py  metrics.py  model_router.py  (+38 more)
deploy/: kern.service  supervisord.conf
docs/: activation-renewal-guide.md  architecture.md  backup-guide.md  corporate-demo-script.md  deployment-checklist.md  deployment-overview.md  gpu-setup.md  hf-adapter-serving.md  internal-deployment.md  model-setup.md  operator-runbook.md  pilot-acceptance-checklist.md  pilot-troubleshooting-matrix.md  quickstart.md  release-checklist.md  restore-guide.md  sample-workspace-guide.md  security-governance.md  security-mitigations.md  server-deployment.md  troubleshooting-guide.md  uninstall-data-deletion.md  update-rollback-guide.md  validation-pack.md  validation-walkthrough.md  windows-deployment.md
evals/: cross_document_reasoning.json  knowledge_graph.json  memory_recall.json  model_routing.json  policy_truth.json  proactive_alerts.json  prompt_cache.json  retrieval.json  routing.json  tool_selection.json
prompts/: README.md  rag-system.md  system.md
scripts/: build-kern-desktop-release.ps1  build-llama-cpp.ps1  create-kern-update-bundle.py  docker-entrypoint.sh  enterprise_acceptance.py  install-and-start-kern-tauri.ps1  install-kern-service.ps1  install-kern.ps1  kern-service.py  package-kern-runtime.ps1  package-tauri-runtime.ps1  preflight-kern.py  register-kern-task.ps1  restore-kern.py  run-hf-adapter-server.py  run-kern-desktop-dev.ps1  run-kern-evals.py  run-kern-hf-adapter-server.ps1  run-kern-release-gate.ps1  run-kern-server-release-gate.ps1  run-kern.ps1  run-llama-server.ps1  smoke-kern-runtime-package.ps1  smoke-kern-uninstall.ps1  smoke-kern-update-restore.ps1  start-kern-desktop.ps1  start-kern.ps1  status-kern-task.ps1  uninstall-kern.ps1  unregister-kern-task.ps1  update-kern.ps1  validate-kern-package.ps1  validate-kern-ui.ps1  validate-kern-ui.py  validate-publish-hygiene.py
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
tests/: conftest.py  locustfile.py  test_action_planner.py  test_adversarial.py  test_auth_routes.py  test_brain.py  test_config.py  test_context.py  test_context_quality.py  test_critical_paths.py  test_docker_integration.py  test_document_classifier.py  test_document_intelligence.py  test_e2e_scaffold.py  test_email_integration.py  test_freeform_intelligence.py  test_german_documents.py  test_health_routes.py  test_hybrid_runtime.py  test_kern_domains.py  (+30 more)
(+52 files in other folders)
